syntax = "proto3";
package credentials;

// -- CREDENTIALS REVOCATION ---------------------------------------------

enum RevocationStatus {
    REVOKED = 0;
    SUSPENDED = 1;
    VALID = 2;
}

message RevocationCheckRequest {
    string type = 1;
    string url = 2;
    map<string, string> properties = 3;
}

message RevocationCheckResponse {
    RevocationStatus status = 1;
}

service CredentialRevocation {
    rpc check(RevocationCheckRequest) returns (RevocationCheckResponse);
}
